--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div id="app"></div>
+  <img src="/src/assets/myReaction.png" alt="ma réaction à cette information"  width ="1400" height="600"/>
   <script type="module" src="/src/scripts/main.ts"></script>
 </body>
 
